<resources>
    <string name="app_name">Test Program</string>
    <string name="action_refresh">Search</string>

    <string name="hint_title">No Title</string>
   <string name="iv_desc">Image Logo</string>

    <string name="msg_no_internet">Please check your internet connection.</string>
    <string name="msg_no_data">No data found.</string>
    <string name="home_fragment_label">Home Fragment</string>
    <string name="user_list">User List</string>

    <string name="photo_page">Photo List</string>
    <string name="user_page">User List</string>
    <string name="map_page">Location</string>
    <string name="search_page">Search</string>
    <string name="no_geo">Location data found to show on map. Please try after some time.</string>

    <string name="hint_company_name">No Company name</string>
    <string name="hint_no_email">Email missing</string>
    <string name="hint_no_website">No Web site</string>
    <string name="hint_no_address">Address missing</string>
    <string name="hint_no_contact">Phone number missing</string>

</resources>
